--- a/index.html
+++ b/index.html
@@ -15,8 +15,87 @@
 <!-- Auth0 SDK -->
 <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
 
-<!-- Auth Configuration -->
-<script src="auth-config.js"></script>
+<!-- Auth0 Configuration (Inline) -->
+<script>
+// ═══════════════════════════════════════════════════════════════
+// Auth0 Configuration - Secure Authentication System
+// ═══════════════════════════════════════════════════════════════
+
+const AUTH0_CONFIG = {
+    domain: 'dev-7kvxe0y2o5czqdpv.us.auth0.com',
+    clientId: 'g7oWaGCz5DvUaCnWkBmoqXtv6wINQJzH',
+    redirectUri: window.location.origin + window.location.pathname
+};
+
+// User roles mapping
+const USER_ROLES = {
+    'eltohamy@bahe.com': 'SUPER',
+    'Bahe@1.com': 'ADMIN',
+    'viewer@kafr.com': 'VIEWER'
+};
+
+// Initialize Auth0 Client
+let auth0Client = null;
+
+async function initAuth0() {
+    try {
+        auth0Client = await auth0.createAuth0Client({
+            domain: AUTH0_CONFIG.domain,
+            clientId: AUTH0_CONFIG.clientId,
+            authorizationParams: {
+                redirect_uri: AUTH0_CONFIG.redirectUri
+            }
+        });
+        console.log('✅ Auth0 initialized successfully');
+    } catch (error) {
+        console.error('❌ Auth0 initialization failed:', error);
+    }
+}
+
+// Login with Auth0
+async function loginWithAuth0(email, password) {
+    try {
+        const response = await fetch(`https://${AUTH0_CONFIG.domain}/oauth/token`, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+                grant_type: 'password',
+                username: email,
+                password: password,
+                client_id: AUTH0_CONFIG.clientId,
+                scope: 'openid profile email'
+            })
+        });
+
+        if (!response.ok) {
+            throw new Error('Invalid credentials');
+        }
+
+        const data = await response.json();
+        const userRole = USER_ROLES[email] || 'VIEWER';
+        
+        return {
+            success: true,
+            email: email,
+            role: userRole,
+            token: data.access_token
+        };
+    } catch (error) {
+        console.error('Login error:', error);
+        return {
+            success: false,
+            error: error.message
+        };
+    }
+}
+
+// Export functions
+window.initAuth0 = initAuth0;
+window.loginWithAuth0 = loginWithAuth0;
+window.USER_ROLES = USER_ROLES;
+</script>
 
 <style>
 /* ═══════════════════════════════════════════════════════════════
@@ -3153,4 +3232,3 @@ alert('❌ حدث خطأ أثناء الاستيراد: ' + error.message);
 
 </body>
 </html>
- 
